elbow method for clusters

--- a/DataCampRetailProcess.ipynb
+++ b/DataCampRetailProcess.ipynb
@@ -646,10 +646,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "851eafcf-f73b-4e77-a1e6-af26ece2097a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------------+-------+---------+---------+-----------------------------------+--------+--------------+---------+--------------+-------------------+-------------------+---------+\n",
+      "|CustomerID|monetry_value|recency|InvoiceNo|StockCode|Description                        |Quantity|InvoiceDate   |UnitPrice|Country       |from_date          |date               |frequency|\n",
+      "+----------+-------------+-------+---------+---------+-----------------------------------+--------+--------------+---------+--------------+-------------------+-------------------+---------+\n",
+      "|18074     |489.6        |5220   |536384   |82484    |WOOD BLACK BOARD ANT WHITE FINISH  |3       |12/1/2010 9:53|6.45     |United Kingdom|2010-12-01 08:26:00|2010-12-01 09:53:00|13       |\n",
+      "|18074     |489.6        |5220   |536384   |84755    |COLOUR GLASS T-LIGHT HOLDER HANGING|48      |12/1/2010 9:53|0.65     |United Kingdom|2010-12-01 08:26:00|2010-12-01 09:53:00|13       |\n",
+      "|18074     |489.6        |5220   |536384   |22464    |HANGING METAL HEART LANTERN        |12      |12/1/2010 9:53|1.65     |United Kingdom|2010-12-01 08:26:00|2010-12-01 09:53:00|13       |\n",
+      "|18074     |489.6        |5220   |536384   |21324    |HANGING MEDINA LANTERN SMALL       |6       |12/1/2010 9:53|2.95     |United Kingdom|2010-12-01 08:26:00|2010-12-01 09:53:00|13       |\n",
+      "|18074     |489.6        |5220   |536384   |22457    |NATURAL SLATE HEART CHALKBOARD     |12      |12/1/2010 9:53|2.95     |United Kingdom|2010-12-01 08:26:00|2010-12-01 09:53:00|13       |\n",
+      "+----------+-------------+-------+---------+---------+-----------------------------------+--------+--------------+---------+--------------+-------------------+-------------------+---------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Merge the tow dataframes\n",
     "final_df = m_val.join(df3, on=\"CustomerID\", how=\"inner\")\n",
@@ -658,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "id": "6844d226-a69f-4bc7-93f8-22e58972eba3",
    "metadata": {},
    "outputs": [],
@@ -668,18 +686,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "3d452880-5ebd-496c-ad9b-f17e76c13a6a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df = final_df.select(['recency','frequency','monetry_value','CustomerID']).distinct"
+    "final_df = final_df.select(['recency','frequency','monetry_value','CustomerID']).distinct()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "6e8761f8-2381-41ed-8e8c-5e593c274a0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Standarization the dataframe\n",
+    "from pyspark.ml.feature import VectorAssembler\n",
+    "from pyspark.ml.feature import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "1c18be1a-6b78-4c96-b76b-3f553c5411c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+---------+-------------------+----------+--------------------+\n",
+      "|recency|frequency|      monetry_value|CustomerID|            features|\n",
+      "+-------+---------+-------------------+----------+--------------------+\n",
+      "|3726000|        9|             155.17|     15447|[3726000.0,9.0,15...|\n",
+      "|3746580|        1|-32.849999999999994|     15100|[3746580.0,1.0,-3...|\n",
+      "|4154520|       12|             155.93|     13898|[4154520.0,12.0,1...|\n",
+      "| 716280|       33|             208.95|     17950|[716280.0,33.0,20...|\n",
+      "| 802500|        3|              173.7|     16565|[802500.0,3.0,173.7]|\n",
+      "|  97020|        1|              106.2|     15070| [97020.0,1.0,106.2]|\n",
+      "| 105180|       13| 248.10000000000002|     16510|[105180.0,13.0,24...|\n",
+      "| 621720|        5|             403.25|     15221|[621720.0,5.0,403...|\n",
+      "|1222740|        9| 422.70000000000005|     17525|[1222740.0,9.0,42...|\n",
+      "| 184560|        3|              39.75|     14589|[184560.0,3.0,39.75]|\n",
+      "|  25740|       67| 357.94999999999993|     16274|[25740.0,67.0,357...|\n",
+      "| 544920|       13|             289.35|     16125|[544920.0,13.0,28...|\n",
+      "|3739860|       20| 386.04999999999995|     18085|[3739860.0,20.0,3...|\n",
+      "| 784500|       65|            1441.73|     16265|[784500.0,65.0,14...|\n",
+      "| 959460|       70| 147.09000000000003|     15503|[959460.0,70.0,14...|\n",
+      "|4416780|       30| 125.13000000000004|     17890|[4416780.0,30.0,1...|\n",
+      "| 100200|       21| 127.08000000000003|     15923|[100200.0,21.0,12...|\n",
+      "|  25740|       19|             538.81|     14496|[25740.0,19.0,538...|\n",
+      "| 199140|       24| 427.79999999999995|     12725|[199140.0,24.0,42...|\n",
+      "| 446700|        1|  76.32000000000001|     18113|[446700.0,1.0,76....|\n",
+      "+-------+---------+-------------------+----------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "assembler = VectorAssembler(inputCols=[\"recency\",\"frequency\",\"monetry_value\"], outputCol=\"features\")\n",
+    "assembled_data = assembler.transform(final_df)\n",
+    "assembled_data.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "377eaa0a-da46-4a41-b4a6-b782146cbabe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+---------+-------------------+----------+--------------------+--------------------+\n",
+      "|recency|frequency|      monetry_value|CustomerID|            features|         standarized|\n",
+      "+-------+---------+-------------------+----------+--------------------+--------------------+\n",
+      "|3726000|        9|             155.17|     15447|[3726000.0,9.0,15...|[0.42717941487700...|\n",
+      "|3746580|        1|-32.849999999999994|     15100|[3746580.0,1.0,-3...|[0.42953887605740...|\n",
+      "|4154520|       12|             155.93|     13898|[4154520.0,12.0,1...|[0.47630848703564...|\n",
+      "| 716280|       33|             208.95|     17950|[716280.0,33.0,20...|[0.08212025531081...|\n",
+      "| 802500|        3|              173.7|     16565|[802500.0,3.0,173.7]|[0.09200522824444...|\n",
+      "|  97020|        1|              106.2|     15070| [97020.0,1.0,106.2]|[0.01112317413616...|\n",
+      "| 105180|       13| 248.10000000000002|     16510|[105180.0,13.0,24...|[0.01205870393364...|\n",
+      "| 621720|        5|             403.25|     15221|[621720.0,5.0,403...|[0.07127911589300...|\n",
+      "|1222740|        9| 422.70000000000005|     17525|[1222740.0,9.0,42...|[0.14018501281446...|\n",
+      "| 184560|        3|              39.75|     14589|[184560.0,3.0,39.75]|[0.02115948277232...|\n",
+      "|  25740|       67| 357.94999999999993|     16274|[25740.0,67.0,357...|[0.00295104619939...|\n",
+      "| 544920|       13|             289.35|     16125|[544920.0,13.0,28...|[0.06247412956381...|\n",
+      "|3739860|       20| 386.04999999999995|     18085|[3739860.0,20.0,3...|[0.42876843975360...|\n",
+      "| 784500|       65|            1441.73|     16265|[784500.0,65.0,14...|[0.08994155957354...|\n",
+      "| 959460|       70| 147.09000000000003|     15503|[959460.0,70.0,14...|[0.11000041905472...|\n",
+      "|4416780|       30| 125.13000000000004|     17890|[4416780.0,30.0,1...|[0.50637613957071...|\n",
+      "| 100200|       21| 127.08000000000003|     15923|[100200.0,21.0,12...|[0.01148775560136...|\n",
+      "|  25740|       19|             538.81|     14496|[25740.0,19.0,538...|[0.00295104619939...|\n",
+      "| 199140|       24| 427.79999999999995|     12725|[199140.0,24.0,42...|[0.02283105439576...|\n",
+      "| 446700|        1|  76.32000000000001|     18113|[446700.0,1.0,76....|[0.05121337751625...|\n",
+      "+-------+---------+-------------------+----------+--------------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "scale = StandardScaler(inputCol='features', outputCol=\"standarized\")\n",
+    "data_scale = scale.fit(assembled_data)\n",
+    "data_scale_output = data_scale.transform(assembled_data)\n",
+    "data_scale_output.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e8761f8-2381-41ed-8e8c-5e593c274a0f",
+   "id": "ab47522b-862e-4307-a539-2763d844ab31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### These data presented will be fitted to the clustering algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "d37ff422-aae8-4c83-9c99-38d2f27f1ba7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------------------------------------------------------+\n",
+      "|standarized                                                    |\n",
+      "+---------------------------------------------------------------+\n",
+      "|[0.42717941487700695,0.23237755599332738,0.0555092310302321]   |\n",
+      "|[0.4295388760574065,0.025819728443703043,-0.011751487010009179]|\n",
+      "+---------------------------------------------------------------+\n",
+      "only showing top 2 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_scale_output.select(\"standarized\").show(2, truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6266e768-7e48-4312-8943-909809353718",
+   "metadata": {},
+   "source": [
+    "### Building the ML Algorithm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "250d6432-525d-413c-a265-4617bf42457b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The most important thing in this classification algorithm\\nis to determin how many clusters we need to use, and for this\\nwe can use the \"Elbow-Method'"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"The most important thing in this classification algorithm\n",
+    "is to determin how many clusters we need to use, and for this\n",
+    "we can use the \"Elbow-Method\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "4725f246-1b38-4df6-b7d5-4a595f71f8d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.clustering import KMeans\n",
+    "from pyspark.ml.evaluation import ClusteringEvaluator\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "f57a8ad4-b8ba-4e78-84cc-d9a3d1474244",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost = np.zeros(10)\n",
+    "evaluator = ClusteringEvaluator(predictionCol='prediction', \n",
+    "                               featuresCol='standarized',\n",
+    "                                metricName=\"silhouette\",\n",
+    "                                distanceMeasure=\"squareEucliden\"\n",
+    "                               )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b928acd-c932-43de-96ca-4039b50b06f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(2,10):\n",
+    "    KMeans_algo = KMeans(featuresCol='standarized', k=i)\n",
+    "    KMeans_fit = KMeans_algo.fit(data_scale_output)\n",
+    "    output= KMeans_fit.transform(data_scale_output)\n",
+    "    cost[i] = KMeans_fit.summary.trainingCost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8853a282-b843-418d-a05d-17f4f844df15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2748b4c5-ad3c-4f3d-99c5-8cd6a9b084a8",
    "metadata": {},
    "outputs": [],
    "source": []
